@@ -6,6 +6,7 @@ ikiwiki (3.11) UNRELEASED; urgency=low
     error can be printed at that point if it's not available,
     allowing the admin to see it during wiki setup.
     Closes: #520015
+  * websetup: If setup fails, restore old setup file.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 21:41:38 -0400
 
